package _2_Zoo;

public class Lizard extends Reptile {
    public Lizard(String name) {
        super(name);
    }
}
