package _2_Zoo;

public class Mammal  extends Animal{
    public Mammal(String name) {
        super(name);
    }
}
