package _2_Zoo;

public class Reptile extends Animal {
    public Reptile(String name) {
        super(name);
    }
}
