@startuml

title ___2_ZOO's Class Diagram__\n

  namespace _2_Zoo {
    class _2_Zoo.Animal {
        - name : String
        + Animal()
        + getName()
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Bear {
        + Bear()
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Gorilla {
        + Gorilla()
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Lizard {
        + Lizard()
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Main {
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Mammal {
        + Mammal()
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Reptile {
        + Reptile()
    }
  }
  

  namespace _2_Zoo {
    class _2_Zoo.Snake {
        + Snake()
    }
  }
  

  _2_Zoo.Bear -up-|> _2_Zoo.Mammal
  _2_Zoo.Gorilla -up-|> _2_Zoo.Mammal
  _2_Zoo.Lizard -up-|> _2_Zoo.Reptile
  _2_Zoo.Mammal -up-|> _2_Zoo.Animal
  _2_Zoo.Reptile -up-|> _2_Zoo.Animal
  _2_Zoo.Snake -up-|> _2_Zoo.Reptile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
